last name search

--- a/views/searchprofile.html
+++ b/views/searchprofile.html
@@ -79,11 +79,17 @@
 </nav>
 <div class="container">
     <h4>Search Profile</h4>
-    <label style="padding-top: 10px" for="firstname">Search by Name:</label>
+    <label style="padding-top: 10px" for="firstname">Search by First Name:</label>
     <div class="input-group">
         <input type="text" name="firstname" id="firstname" class="form-control"
                placeholder="Name">
         <button class="btn btn-success" id="btnLoadUsersByName">Search</button>
+    </div>
+    <label style="padding-top: 10px" for="lastname">Search by Last Name:</label>
+    <div class="input-group">
+        <input type="text" name="lastname" id="lastname" class="form-control"
+               placeholder="Name">
+        <button class="btn btn-success" id="btnLoadUsersByLastName">Search</button>
     </div>
     <label style="padding-top: 10px" for="Username">Search by Username:</label>
     <div class="input-group">
