--- a/views/room.html
+++ b/views/room.html
@@ -67,8 +67,10 @@
         </ul>
     </div>
 </nav>
-<div id="video-grid"></div>
-<button id="hangUpButton">End Call</button>
+<div class="container">
+    <div id="video-grid"></div>
+    <button id="hangUpButton" class="btn btn-danger">End Call</button>
+</div>
 <div class="container rateUser">
     Rate User!
     <label for="overallFluency">Overall Fluency</label>
