changing last name button

--- a/views/searchprofile.html
+++ b/views/searchprofile.html
@@ -104,7 +104,7 @@
     <div class="input-group">
         <input type="text" name="lastname" id="lastname" class="form-control"
                placeholder="Name">
-        <button class="btn btn-success" id="btnLoadUsersByLastName">Search</button>
+        <button class="btn btn-search" id="btnLoadUsersByLastName">Search</button>
     </div>
     <label style="padding-top: 10px" for="Username">Search by Username:</label>
     <div class="input-group">
