--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -40,12 +40,22 @@
     */
 }
 .boxOne, .bio, .boxTwo{
-    border:3px solid black;
+    border:3px solid orange;
     align: 'center';
     text-align: center;
     height: 150px;
     width: 100%;
     margin-top: 15px;
+}
+.userRating {
+    border:3px solid orange;
+    align: center;
+    text-align: center;
+    position: absolute;
+    width: 400px;
+    top: 50%;
+    left: 50%;
+    margin: 15px 0px 0px -200px;
 }
 .boxTwo{
     /*border:5px solid black;
