--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -82,6 +82,7 @@
     <button onclick="window.location.href='/viewfollowing'"; class="btn-success" id="btnAddFollow">View Following</button>
 </div>
 <div id="userInfo" class="container">
+
     <div class="row">
         <div class="col-sm-12">
             <div class = "bio">
@@ -101,6 +102,18 @@
             <div class = "boxTwo">
                 <h4>Languages to be Learned</h4>
                 <p id="langLearn" style="text-align: center"><%= langLearn %></p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class = "userRating" >
+                <h4>User Rating</h4>
+                <h6 style="text-align: center">Overall Fluency: </h6>
+                <h6 style="text-align: center">Pronunciation: </h6>
+                <h6 style="text-align: center">Conversational Ability: </h6>
+                <h6 style="text-align: center">Listening: </h6>
+                <h6 style="text-align: center">Speaking: </h6>
             </div>
         </div>
     </div>
