--- a/views/room.html
+++ b/views/room.html
@@ -73,7 +73,10 @@
 </nav>
 <div class="container">
     <div id="video-grid"></div>
-    <button id="hangUpButton" class="btn btn-danger">End Call</button>
+    <div class="container" id="buttonAndClock">
+        <div id="timer"></div>
+        <button id="hangUpButton" class="btn btn-danger">End Call</button>
+    </div>
 </div>
 <div class="container rateUser">
     Rate User!
