--- a/views/room.html
+++ b/views/room.html
@@ -12,7 +12,13 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+<!--    select stuff -->
+    <link rel="stylesheet" href=
+            "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.min.css">
+    <script src=
+                    "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js">
+    </script>
+<!--    select stuff -->
     <title>Document</title>
     <link rel="stylesheet" href="../stylesheets/room.css">
 </head>
@@ -79,48 +85,70 @@
     </div>
 </div>
 <div class="container rateUser">
-    Rate User!
-    <label for="overallFluency">Overall Fluency</label>
-    <select name="overallFluency" id="overallFluency">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-    </select>
-    <label for="pronunciation">Pronunciation</label>
-    <select name="pronunciation" id="pronunciation">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-    </select>
-    <label for="conversationalAbility">Conversational Ability</label>
-    <select name="conversationalAbility" id="conversationalAbility">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-    </select>
-    <label for="listening">Listening</label>
-    <select name="listening" id="listening">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-    </select>
-    <label for="speaking">Speaking</label>
-    <select name="speaking" id="speaking">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-    </select>
-    <button id="submitRating">Submit</button>
+    <div id="rateUserTop">Rate User!</div>
+    <div class="input-group inputMargin">
+        <label for="overallFluency">Overall Fluency</label>
+        <div class="dropdown bootstrap-select">
+            <select class="selectpicker" name="overallFluency" id="overallFluency" data-width="60px">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+        </div>
+    </div>
+    <div class="input-group inputMargin">
+        <label for="pronunciation">Pronunciation</label>
+        <div class="dropdown bootstrap-select">
+            <select class="selectpicker" data-width="60px" name="pronunciation" id="pronunciation">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+        </div>
+    </div>
+    <div class="input-group inputMargin">
+        <label for="conversationalAbility">Conversational Ability</label>
+        <div class="dropdown bootstrap-select">
+            <select class="selectpicker" data-width="60px" name="conversationalAbility" id="conversationalAbility">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+        </div>
+    </div>
+    <div class="input-group inputMargin">
+        <label for="listening">Listening</label>
+        <div class="dropdown bootstrap-select">
+            <select class="selectpicker" data-width="60px" name="listening" id="listening">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+        </div>
+    </div>
+    <div class="input-group inputMargin">
+        <label for="speaking">Speaking</label>
+        <div class="dropdown bootstrap-select">
+            <select class="selectpicker" data-width="60px" name="speaking" id="speaking">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+        </div>
+    </div>
+    <div style="text-align: center;">
+        <button class="btn btn-search" id="submitRating">Submit</button>
+    </div>
 </div>
 </body>
 </html>
