--- a/views/searchprofile.html
+++ b/views/searchprofile.html
@@ -91,7 +91,7 @@
     </div>
 </nav>
 <div class="container">
-    <h4>Search Profile</h4>
+    <h1 style="text-align: center">Search Profile</h1>
     <label style="padding-top: 10px" for="firstname">Search by First Name:</label>
     <div class="input-group">
         <input type="text" name="firstname" id="firstname" class="form-control"
