--- a/views/homepage.html
+++ b/views/homepage.html
@@ -132,6 +132,21 @@
 </div>
 </div>
 </div>
+
+<div class="container alertBoxReceive">
+    <div class="container alertBoxReceiveInner">
+    </div>
+    <div class="container alertBoxReceiveBottom">
+        <button type="button" class="alertBoxReceiveAccept btn btn-search">
+            Accept
+        </button>
+        <button type="button" class="alertBoxReceiveDecline btn btn-send">
+            Decline
+        </button>
+    </div>
+</div>
+
+<script src="/socket.io/socket.io.js"></script>
 <script src="/javascripts/homepage.js"></script>
 </body>
 </html>
