chat invites from post page. Set prevision on user ratings on otherprofile and myprofile

--- a/views/posts.html
+++ b/views/posts.html
@@ -84,6 +84,20 @@
     <label for="input" id="label1"> <%= username %> </label>
     <input id="input" autocomplete="off" /><button>Send</button>
 </form>
+
+<div class="container alertBoxReceive">
+    <div class="container alertBoxReceiveInner">
+    </div>
+    <div class="container alertBoxReceiveBottom">
+        <button type="button" class="alertBoxReceiveAccept btn btn-search">
+            Accept
+        </button>
+        <button type="button" class="alertBoxReceiveDecline btn btn-send">
+            Decline
+        </button>
+    </div>
+</div>
+
 <script src="/socket.io/socket.io.js"></script>
 <script src="javascripts/posts.js"></script>
 </body>
