--- a/public/stylesheets/myprofile.css
+++ b/public/stylesheets/myprofile.css
@@ -10,3 +10,48 @@
     top: 15px;
     left: 210px;
 }
+
+
+.alertBoxReceive{
+    text-align: center;
+    display: none;
+    z-index: 1;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    border: 2px solid black;
+    width: 400px;
+    height: 200px;
+    margin-top: -100px;
+    margin-left: -200px;
+    align-content: center;
+    background: white;
+}
+
+.alertBoxReceiveInner{
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+.alertBoxReceiveBottom{
+    text-align: center;
+    font-size: 20px;
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+}
+
+.btn-search{
+    background-color: #EE973A !important;
+    color: #4B4B69 !important;
+}
+
+.btn-decline{
+    background-color: #EE973A !important;
+    color: #4B4B69 !important;
+}
+
+.btn-send{
+    background-color: #4B4B69 !important;
+    color: white;
+}
