--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -76,7 +76,7 @@
 </div>
 <h3 id="fullname" style="text-align: center"><%=firstname%> <%=lastname%></h3>
 <h4 id="head_username" style="text-align: center; text-size: 31px; border-color: Blue"><%= username %></h4>
-<script src="javascripts/myprofile.js"></script>
+<!--<script src="javascripts/myprofile.js"></script>-->
 <div style="text-align: center; padding: 10px">
 <button onclick="window.location.href='/editprofile';"> Edit Profile </button>
 </div>
@@ -120,6 +120,21 @@
         </div>
     </div>
 </div>
+
+<div class="container alertBoxReceive">
+    <div class="container alertBoxReceiveInner">
+    </div>
+    <div class="container alertBoxReceiveBottom">
+        <button type="button" class="alertBoxReceiveAccept btn btn-search">
+            Accept
+        </button>
+        <button type="button" class="alertBoxReceiveDecline btn btn-send">
+            Decline
+        </button>
+    </div>
+</div>
+
+<script src="/socket.io/socket.io.js"></script>
 <script src="/javascripts/myprofile.js"></script>
 </body>
 </html>
