searchprofile and editprofile can receive chat invites now

--- a/views/searchprofile.html
+++ b/views/searchprofile.html
@@ -151,6 +151,21 @@
 
     </div>
 </div>
+
+<div class="container alertBoxReceive">
+    <div class="container alertBoxReceiveInner">
+    </div>
+    <div class="container alertBoxReceiveBottom">
+        <button type="button" class="alertBoxReceiveAccept btn btn-search">
+            Accept
+        </button>
+        <button type="button" class="alertBoxReceiveDecline btn btn-send">
+            Decline
+        </button>
+    </div>
+</div>
+
+<script src="/socket.io/socket.io.js"></script>
 <script src="javascripts/searchprofile.js"></script>
 </body>
 </html>
