Clean up of all code

--- a/views/error.html
+++ b/views/error.html
@@ -1,21 +1,12 @@
-<!--//extends layout-->
-<!--//-->
-<!--//block content-->
-<!--//  h1= message-->
-<!--//  h2= error.status-->
-<!--//  pre #{error.stack}-->
 <!DOCTYPE html>
 <html>
 <head>
     <script>
-        // console.log(error.status)
-        // console.log(error.stack)
-        // alert(error.status)
-        alert('ads;lfkajdf;slkajdfs')
+        alert('error page')
     </script>
 </head>
 <body>
-<h1>asdf;lkjas;lkjfd</h1>
+<h1>ERROR</h1>
 </body>
 </html>
 
