--- a/views/login.html
+++ b/views/login.html
@@ -33,6 +33,11 @@
         <br>
         <a href="/createprofile" style="color: #4B4B69">Create an Account</a>
     </div>
+    <br>
+    <br>
+    <div class="text-center" id="tryAgain">
+        <%=message%>
+    </div>
 </div>
 </form>
 
