--- a/public/stylesheets/posts.css
+++ b/public/stylesheets/posts.css
@@ -1,47 +1,64 @@
-body {  margin: 0;
-        padding-bottom: 3rem;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+body {
+    margin: 0;
+    padding-bottom: 3rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
 
-#form { background: rgba(0, 0, 0, 0.15);
-        padding: 0.25rem; position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        display: flex;
-        height: 3rem;
-        box-sizing: border-box;
-        backdrop-filter: blur(10px); }
+#form {
+    background: rgba(0, 0, 0, 0.15);
+    padding: 0.25rem; position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    height: 3rem;
+    box-sizing: border-box;
+    backdrop-filter: blur(10px);
+}
 
-#input {border: none;
-        padding: 0 1rem;
-        flex-grow: 1;
-        border-radius: 2rem;
-        margin: 0.25rem; }
+#input {
+    border: none;
+    padding: 0 1rem;
+    flex-grow: 1;
+    border-radius: 2rem;
+    margin: 0.25rem;
+}
 
-#input:focus { outline: none; }
+#input:focus {
+    outline: none;
+}
 
-#form > button {background: #333;
-                border: none;
-                padding: 0 1rem;
-                margin: 0.25rem;
-                border-radius: 3px;
-                outline: none;
-                color: #fff; }
+#form > button {
+    background: #333;
+    border: none;
+    padding: 0 1rem;
+    margin: 0.25rem;
+    border-radius: 3px;
+    outline: none;
+    color: #fff;
 
-#messages { list-style-type: none;
-            margin: auto;
-            padding: 0;
-            max-width: 700px;}
+}
+#messages {
+    list-style-type: none;
+    margin: auto;
+    padding: 0;
+    max-width: 700px;
+}
+#messages > li {
+    padding: 0.5rem 1rem;
+    border: 1px solid rgb(235, 238, 240);
+}
 
-#messages > li {padding: 0.5rem 1rem;
-                border: 1px solid rgb(235, 238, 240);}
+#messages > li:hover {
+    background: #efefef;
+}
 
-#messages > li:hover {background: #efefef;}
-
-nav{position: fixed;
+nav{
+    position: fixed;
     top: 0;
     left: 0;
-    right: 0;}
+    right: 0;
+}
 
 #button_badge {
     background-color: #fa3e3e;
