--- a/views/upload.html
+++ b/views/upload.html
@@ -64,7 +64,8 @@
     </div>
 </nav>
     <h1>Uploaded image</h1>
-    <p id="picName">
+    <p>"Successfully uploaded image!"</p>
+    <p id="picName" style="display: none">
         <%= message %>
     </p>
     <script src="/javascripts/upload.js"></script>
