--- a/views/myprofile.html
+++ b/views/myprofile.html
@@ -119,6 +119,7 @@
         </div>
     </div>
 </div>
+<script src="/socket.io/socket.io.js"></script>
 <script src="/javascripts/myprofile.js"></script>
 </body>
 </html>
